ghost/environments/skymoore.com/pgp-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pgp-skymoore-com
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    external-dns.alpha.kubernetes.io/hostname: "pgp.skymoore.com"
    nginx.ingress.kubernetes.io/permanent-redirect: "https://keys.openpgp.org/vks/v1/by-fingerprint/6AF314E3ACDEF03A3A753539662D71CF06A33D26"
    nginx.ingress.kubernetes.io/permanent-redirect-code: "307"
spec:
  ingressClassName: nginx
  rules:
    - host: pgp.skymoore.com
      http:
        paths:
          - pathType: Prefix
            backend:
              service:
                name: ghost-service
                port:
                  name: ghost-port
            path: /
  tls:
    - hosts:
      - pgp.skymoore.com
      secretName: pgp-tls-cert
